force-app/main/default/objects/blng__UsageSummary__c/fields/ActivePeriod__c.field-meta.xml
<CustomField>
    <fullName>ActivePeriod__c</fullName>
    <formula>blng__SummaryEndDate__c =
(IF( ISPICKVAL(blng__OrderProduct__r.blng__HoldBilling__c,&quot;Yes&quot;),
blng__OrderProduct__r.SBQQ__RequiredBy__r.blng__NextBillingDate__c,
blng__OrderProduct__r.blng__NextBillingDate__c) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Period</label>
    <type>Checkbox</type>
</CustomField>