force-app/main/default/objects/blng__UsageSummary__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <formula>( YEAR(  blng__SummaryStartDate__c ) - YEAR(  blng__OrderProduct__r.ServiceDate )  ) * 12 +
( MONTH( blng__SummaryStartDate__c ) - MONTH( blng__OrderProduct__r.ServiceDate ) ) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>