force-app/main/default/objects/blng__UsageSummary__c/fields/ParentNumber__c.field-meta.xml
<CustomField>
    <fullName>ParentNumber__c</fullName>
    <formula>blng__OrderProduct__r.SBQQ__RequiredBy__r.OrderItemNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Number</label>
    <type>Text</type>
</CustomField>